fixed colors in collapsed navbar

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -28,6 +28,10 @@ nav.navbar {
 		}
 	}
 
+	.navbar-nav .open .dropdown-menu, .nav .open > a {
+		background-color: $secondary_color;
+	}
+
 	a { 
 		color: $secondary_color;
 	}
